<resources>
    <string name="app_name">Weather Together</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="go">Go!</string>
    <string name="gradus">42°C</string>
    <string name="city">Chosen City</string>
    <string name="humidity_label">Humidity</string>
    <string name="humidity_value">70%</string>
    <string name="winddirection_label">Wind Direction</string>
    <string name="winddirection_value">S</string>
    <string name="condition_value">Snow</string>
    <string name="windspeed_label">Wind Speed</string>
    <string name="windspeed">2 m/s</string>
    <string name="pressure_label">Pressure</string>
    <string name="pressure_value">1024 mbar</string>
    <string name="nameOfService">Service Name</string>
    <string-array name="temperature_units">
        <item>C</item>
        <item>F</item>
        <item>K</item>
    </string-array>
    <string-array name="speed_units">
        <item>m/s</item>
        <item>km/h</item>
        <item>mph</item>
    </string-array>
    <string-array name="pressure_units">
        <item>mmHg</item>
        <item>in</item>
        <item>mb</item>
    </string-array>
    <!-- Days -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="region">Region</string>
    <string name="na">N/A</string>

    <!-- AdMob -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-9399084835921779/8846820647</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-9399084835921779/8846820647</string>
    <string name="loading">Loading</string>
    <string name="previous_service">Previous service</string>
    <string name="next_service">Next service</string>
</resources>
