<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forecast_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/forecast_hi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gradus"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#AA0000"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/forecast_condition_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/condition_value"
            android:src="@drawable/windy" />

    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/forecast_lo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gradus"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000088"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/forecast_condition_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/condition_value"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

    </TableRow>

</TableLayout>